--- a/NeighborlyFrontEnd/requirements.txt
+++ b/NeighborlyFrontEnd/requirements.txt
@@ -4,7 +4,7 @@ chardet==5.2.0
 click==8.1.7
 dominate==2.7.0
 Flask==2.3.3
-Flask-Bootstrap==3.3.7.1
+flask-bootstrap
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -15,4 +15,3 @@ visitor==0.1.3
 Werkzeug==2.3.7
 feedgen==1.0.0
 gunicorn
-flask_bootstrap
